# sysrat

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config-manager.toml  justfile  lint.sh  rebuild.py  rebuild.sh  requirements-dev.txt  start.py  start.sh  status.py  status.sh  stop.py  stop.sh  sysrat.toml
.github/workflows/: update-readme.yml
.script-tests/: shellcheck_test.py
.sys/env/: .env.example
.sys/utils/: fix_nerdfonts.py  remove_emojis.py
frontend/: Cargo.toml  build.rs  index.html  keybinds.toml
frontend/assets/: menu-text.ascii  sysrat.ascii
frontend/build_helpers/: ascii.rs  date.rs  keybinds.rs  mod.rs  statusline.rs  theme.rs  version.rs
frontend/src/: init.rs  lib.rs  version.rs
frontend/themes/: cyberpunk.toml  dracula.toml  frappe.toml  gruvbox-dark.toml  gruvbox-light.toml  latte.toml  macchiato.toml  mocha.toml  synthwave.toml
server/: Cargo.toml
server/src/: config.rs  main.rs  version.rs
server/src/config/: app_config.rs  mod.rs  models.rs  scanner.rs
server/src/routes/: mod.rs  types.rs
server/src/routes/configs/: handlers.rs  mod.rs  validation.rs
server/src/routes/containers/: actions.rs  details.rs  handlers.rs  mod.rs
server/src/routes/containers/parser/: basic.rs  config.rs  mod.rs  network.rs  storage.rs
sys/env/: .env.example
sys/html/: htmllint.py
sys/layout/: statusline.toml
sys/rust/: audit.py  check.py  clean.py  clippy.py  rustfmt.py  test_rust.py
sys/theme/: theme.py
sys/utils/: cleanup_backups.py  fix_nerdfonts.py  lines.py  precommit.py  pyclean.py  pycompile.py  pylint.py  remove_emojis.py  (+1 more)
(+63 files in other folders)
