[package]
name = "sysrat-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sysrat"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
dotenvy = "0.15"
